default/objects/Opportunity/fields/A_large_fleet_of_vehicles__c.field-meta.xml
<CustomField>
    <fullName>A_large_fleet_of_vehicles__c</fullName>
    <defaultValue>0</defaultValue>
    <description>когда менеджер меняет кол-во авто в большую или меньшую сторону (20авт)</description>
    <label>A large fleet of vehicles</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>