default/objects/Opportunity/fields/Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner__c</fullName>
    <description>Owner from Account</description>
    <formula>Account.Owner.FirstName &amp; " " &amp; Account.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Owner from Account</inlineHelpText>
    <label>Account.Owner</label>
    <type>Text</type>
</CustomField>