default/objects/Opportunity/fields/Account_Price_Book__c.field-meta.xml
<CustomField>
    <fullName>Account_Price_Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select Account Price Book from Account. If you don't see any, create new under your Account.</inlineHelpText>
    <label>Account Price Book</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>You must add Account Price Book under Account!</errorMessage>
        <filterItems>
            <field>Account_Price_Book__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <filterItems>
            <field>Account_Price_Book__c.Approval_Status__c</field>
            <operation>equals</operation>
            <value>Not required, Approved</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account_Price_Book__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>