default/objects/Opportunity/fields/Account_Status_from_Account__c.field-meta.xml
<CustomField>
    <fullName>Account_Status_from_Account__c</fullName>
    <description>Account Status field from Account, populated by users for now and by GFN in the future.</description>
    <formula>TEXT(Account.Account_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Status from Account</label>
    <type>Text</type>
</CustomField>