default/objects/Opportunity/fields/Activation_Installation_Price__c.field-meta.xml
<CustomField>
    <fullName>Activation_Installation_Price__c</fullName>
    <description>Used for calculating One-time Payment - Services (Price for Activation/Installation only - Carnet 85).</description>
    <label>Activation/Installation Price</label>
    <summarizedField>Carnet_Unit__c.Activation_Installation_Price__c</summarizedField>
    <summaryForeignKey>Carnet_Unit__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>