default/objects/Opportunity/fields/Additional_Fueling_Methods__c.field-meta.xml
<CustomField>
    <fullName>Additional_Fueling_Methods__c</fullName>
    <label>Additional Fueling Methods</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Other Issuer Card</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Bank Card</fullName>
            </value>
            <value>
                <fullName>Universal Fleet Card</fullName>
            </value>
            <value>
                <fullName>House Account</fullName>
            </value>
            <value>
                <fullName>Oil Company Card</fullName>
            </value>
            <value>
                <fullName>On-Site Tanks</fullName>
            </value>
            <value>
                <fullName>Wet Hosing</fullName>
            </value>
            <value>
                <fullName>Leasing Company Card</fullName>
            </value>
            <value>
                <fullName>Unattended Commercial Fueling</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>