default/objects/Opportunity/fields/Additional_Hardware_Price_Modified__c.field-meta.xml
<CustomField>
    <fullName>Additional_Hardware_Price_Modified__c</fullName>
    <description>Price Modified for Additional Hardware.</description>
    <label>Additional Hardware Price Modified</label>
    <summaryFilterItems>
        <field>Additional_Hardware__c.Pricing_Approval_Status__c</field>
        <operation>equals</operation>
        <value>Approval Required</value>
    </summaryFilterItems>
    <summaryForeignKey>Additional_Hardware__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>