default/objects/Opportunity/fields/AGB_Datenschutzhinweise_Richtigkeit__c.field-meta.xml
<CustomField>
    <fullName>AGB_Datenschutzhinweise_Richtigkeit__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Kunde (bei Personengesellschaften aller inhaber) bestätigt, die Allgemeinen Geschäftsbedingungen inkl. der Datenschutzhinweise und der aktuellen Gebührenüberischt gelesen zu haben und erkennt diese an. Kunde bestätigt die Richtigkeit der gemachten Angaben</inlineHelpText>
    <label>AGB/Datenschutzhinweise/Richtigkeit</label>
    <type>Checkbox</type>
</CustomField>