default/objects/Opportunity/fields/Agree_To_Deposit_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Agree_To_Deposit_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agree To Deposit Agreement</label>
    <type>Checkbox</type>
</CustomField>