default/objects/Opportunity/fields/Agree_to_Privacy_Policy__c.field-meta.xml
<CustomField>
    <fullName>Agree_to_Privacy_Policy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agree to Privacy Policy</label>
    <type>Checkbox</type>
</CustomField>