default/objects/Opportunity/fields/Agree_to_telephone_contact__c.field-meta.xml
<CustomField>
    <fullName>Agree_to_telephone_contact__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Customer agrees to be contacted via phone.</inlineHelpText>
    <label>Agree to telephone contact</label>
    <type>Checkbox</type>
</CustomField>