default/objects/Opportunity/fields/Agree_to_VAT_Recovery_TC__c.field-meta.xml
<CustomField>
    <fullName>Agree_to_VAT_Recovery_TC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agree to VAT-Recovery T&amp;C</label>
    <type>Checkbox</type>
</CustomField>