default/objects/Opportunity/fields/Agreement_Counts__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Counts__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Количество договоров</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>