default/objects/Opportunity/fields/Agreement_Probability__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Probability__c</fullName>
    <formula>Probability * 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agreement * Probability</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>