default/objects/Opportunity/fields/ALL_Cards__c.field-meta.xml
<CustomField>
    <fullName>ALL_Cards__c</fullName>
    <formula>Number_of_Cards__c + Number_Business_CARD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ALL Cards</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>