default/objects/Opportunity/fields/ALL_Cards_Probability__c.field-meta.xml
<CustomField>
    <fullName>ALL_Cards_Probability__c</fullName>
    <formula>ALL_Cards__c * Probability</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ALL Cards * Probability</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>