default/objects/Opportunity/fields/Amount_payment__c.field-meta.xml
<CustomField>
    <fullName>Amount_payment__c</fullName>
    <label>Amount payment</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>