default/objects/Opportunity/fields/Angaben_korrekt__c.field-meta.xml
<CustomField>
    <fullName>Angaben_korrekt__c</fullName>
    <label>Angaben korrekt?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ja</fullName>
            </value>
            <value>
                <fullName>IBAN stimmt nicht</fullName>
            </value>
            <value>
                <fullName>BIC stimmt nicht</fullName>
            </value>
            <value>
                <fullName>Registrierte Adresse stimmt nicht</fullName>
            </value>
            <value>
                <fullName>Ust – IdNr. stimmt nicht</fullName>
            </value>
            <value>
                <fullName>Name der Firma stimmt nicht</fullName>
            </value>
            <value>
                <fullName>Nein, sieh Notes</fullName>
            </value>
            <value>
                <fullName>Steuernummer falsch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>