default/objects/Opportunity/fields/Angebotsdauer__c.field-meta.xml
<CustomField>
    <fullName>Angebotsdauer__c</fullName>
    <label>Angebotsdauer</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>3 Monate</fullName>
            </value>
            <value>
                <fullName>4 Monate</fullName>
            </value>
            <value>
                <fullName>5 Monate</fullName>
            </value>
            <value>
                <fullName>6 Monate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>