default/objects/Opportunity/fields/Anzahl_der_Karten__c.field-meta.xml
<CustomField>
    <fullName>Anzahl_der_Karten__c</fullName>
    <label>Anzahl der Karten*</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>