default/objects/Opportunity/fields/Approved_by_Start_Manager__c.field-meta.xml
<CustomField>
    <fullName>Approved_by_Start_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved by Start Manager</label>
    <type>Checkbox</type>
</CustomField>