default/objects/Opportunity/fields/Available_for_reassignment_text__c.field-meta.xml
<CustomField>
    <fullName>Available_for_reassignment_text__c</fullName>
    <description>Formula for Custom DE to mark E2E drop offs available for reassignment:
0050O000007Drnn - E2E Site Guest User
0050O000006g7uw - Robert Kobrynski (Team Leader Inbound 2, Distribution Queue)
00520000005vYf3 - Y. Aden-Farah (Team Leader Inbound 1, Distribution Queue)</description>
    <formula>IF(
    AND(
        OR(E2E__c = TRUE,  E2E_2__c = TRUE),
        Number_of_open_tasks__c = 0,
        IsClosed = FALSE,
        Owner.Profile.Name != 'E2E Profile',
        Owner.Profile.Name != 'E2E PL Profile',
         Primary_Contact_Phone__c != null
    )    
, "true", "false")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available for reassignment text</label>
    <type>Text</type>
</CustomField>