default/objects/Opportunity/fields/AZS_with_Discount_2_address__c.field-meta.xml
<CustomField>
    <fullName>AZS_with_Discount_2_address__c</fullName>
    <label>AZS_with_Discount_2_address</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ShellAZS</valueSetName>
    </valueSet>
</CustomField>