default/objects/Opportunity/fields/Bank__c.field-meta.xml
<CustomField>
    <fullName>Bank__c</fullName>
    <label>Bank</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Derzeitige_Zahlungsmethode__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Commerzbank</fullName>
            </value>
            <value>
                <fullName>Deutsche Bank</fullName>
            </value>
            <value>
                <fullName>Sparkasse</fullName>
            </value>
            <value>
                <fullName>Andere</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>