default/objects/Opportunity/fields/Bank_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Number__c</fullName>
    <description>Min 2 numbers, max 10.</description>
    <label>Bank Account Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>