default/objects/Opportunity/fields/Bank_Account_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Prefix__c</fullName>
    <description>Min 2 numbers, max 6.</description>
    <label>Bank Account Prefix</label>
    <length>6</length>
    <type>Text</type>
</CustomField>