default/objects/Opportunity/fields/Bank_Code__c.field-meta.xml
<CustomField>
    <fullName>Bank_Code__c</fullName>
    <description>Connected to Bank Country and Bank Name.</description>
    <label>Bank Code</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Bank_Country__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>0100</fullName>
            </value>
            <value>
                <fullName>0300</fullName>
            </value>
            <value>
                <fullName>0600</fullName>
            </value>
            <value>
                <fullName>0710</fullName>
            </value>
            <value>
                <fullName>0800</fullName>
            </value>
            <value>
                <fullName>2010</fullName>
            </value>
            <value>
                <fullName>2020</fullName>
            </value>
            <value>
                <fullName>2030</fullName>
            </value>
            <value>
                <fullName>2060</fullName>
            </value>
            <value>
                <fullName>2070</fullName>
            </value>
            <value>
                <fullName>2100</fullName>
            </value>
            <value>
                <fullName>2200</fullName>
            </value>
            <value>
                <fullName>2220</fullName>
            </value>
            <value>
                <fullName>2240</fullName>
            </value>
            <value>
                <fullName>2250</fullName>
            </value>
            <value>
                <fullName>2260</fullName>
            </value>
            <value>
                <fullName>2275</fullName>
            </value>
            <value>
                <fullName>2600</fullName>
            </value>
            <value>
                <fullName>2700</fullName>
            </value>
            <value>
                <fullName>3030</fullName>
            </value>
            <value>
                <fullName>3050</fullName>
            </value>
            <value>
                <fullName>3060</fullName>
            </value>
            <value>
                <fullName>3500</fullName>
            </value>
            <value>
                <fullName>4000</fullName>
            </value>
            <value>
                <fullName>4300</fullName>
            </value>
            <value>
                <fullName>5500</fullName>
            </value>
            <value>
                <fullName>5800</fullName>
            </value>
            <value>
                <fullName>6000</fullName>
            </value>
            <value>
                <fullName>6100</fullName>
            </value>
            <value>
                <fullName>6200</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>