default/objects/Opportunity/fields/Bank_Country__c.field-meta.xml
<CustomField>
    <fullName>Bank_Country__c</fullName>
    <label>Bank Country</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Czech Republic</fullName>
            </value>
            <value>
                <fullName>Slovakia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>