default/objects/Opportunity/fields/Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Bank_Name__c</fullName>
    <description>Connected to Bank Country and Bank Code.</description>
    <label>Bank Name</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Bank_Code__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Komerční banka, a.s.</fullName>
            </value>
            <value>
                <fullName>Československá obchodní banka, a. s.</fullName>
            </value>
            <value>
                <fullName>MONETA Money Bank, a.s.</fullName>
            </value>
            <value>
                <fullName>ČESKÁ NÁRODNÍ BANKA</fullName>
            </value>
            <value>
                <fullName>Česká spořitelna</fullName>
            </value>
            <value>
                <fullName>Fio banka</fullName>
            </value>
            <value>
                <fullName>MUFG Bank (Europe) N.V. Prague Branch</fullName>
            </value>
            <value>
                <fullName>Československé úvěrní družstvo</fullName>
            </value>
            <value>
                <fullName>Citfin</fullName>
            </value>
            <value>
                <fullName>TRINITY BANK a.s.</fullName>
            </value>
            <value>
                <fullName>Hypoteční banka</fullName>
            </value>
            <value>
                <fullName>Peněžní dům</fullName>
            </value>
            <value>
                <fullName>Artesa</fullName>
            </value>
            <value>
                <fullName>Poštová banka</fullName>
            </value>
            <value>
                <fullName>Banka CREDITAS a.s.</fullName>
            </value>
            <value>
                <fullName>NEY spořitelní družstvo</fullName>
            </value>
            <value>
                <fullName>Podnikatelská družstevní záložna</fullName>
            </value>
            <value>
                <fullName>Citibank Europe plc</fullName>
            </value>
            <value>
                <fullName>UniCredit Bank Czech Republic and Slovakia</fullName>
            </value>
            <value>
                <fullName>Air Bank a.s.</fullName>
            </value>
            <value>
                <fullName>BNP Paribas Personal Finance SA</fullName>
            </value>
            <value>
                <fullName>PKO BP S.A.</fullName>
            </value>
            <value>
                <fullName>ING Bank N.V.</fullName>
            </value>
            <value>
                <fullName>Expobank CZ a.s.</fullName>
            </value>
            <value>
                <fullName>Českomoravská záruční a rozvojová banka</fullName>
            </value>
            <value>
                <fullName>Raiffeisenbank a.s.</fullName>
            </value>
            <value>
                <fullName>J &amp; T BANKA</fullName>
            </value>
            <value>
                <fullName>PPF banka a.s.</fullName>
            </value>
            <value>
                <fullName>Equa bank a.s.</fullName>
            </value>
            <value>
                <fullName>COMMERZBANK Aktiengesellschaft</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>