default/objects/Opportunity/fields/bearbeitet_von__c.field-meta.xml
<CustomField>
    <fullName>bearbeitet_von__c</fullName>
    <label>bearbeitet von</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Anita Eštóková</fullName>
            </value>
            <value>
                <fullName>Autoprocessed by Sales</fullName>
            </value>
            <value>
                <fullName>CCS Credit</fullName>
            </value>
            <value>
                <fullName>Čermák Petr</fullName>
            </value>
            <value>
                <fullName>Credit UK</fullName>
            </value>
            <value>
                <fullName>Dalma Decsiová</fullName>
            </value>
            <value>
                <fullName>David Witteveen</fullName>
            </value>
            <value>
                <fullName>Jaroslava Polaskova</fullName>
            </value>
            <value>
                <fullName>Jaroslava Pribylova</fullName>
            </value>
            <value>
                <fullName>Katarzyna Sobek</fullName>
            </value>
            <value>
                <fullName>Katarzyna Szuflak</fullName>
            </value>
            <value>
                <fullName>Lucie Cechova</fullName>
            </value>
            <value>
                <fullName>Lucie Konvickova</fullName>
            </value>
            <value>
                <fullName>Martin Elstner</fullName>
            </value>
            <value>
                <fullName>Michal Ulrich</fullName>
            </value>
            <value>
                <fullName>NIzam Boodoo</fullName>
            </value>
            <value>
                <fullName>Petr Hlavac</fullName>
            </value>
            <value>
                <fullName>Radana Benešová</fullName>
            </value>
            <value>
                <fullName>Renata Dvorakova</fullName>
            </value>
            <value>
                <fullName>Romy Stehlinová</fullName>
            </value>
            <value>
                <fullName>Ruben Elgersma</fullName>
            </value>
            <value>
                <fullName>Veronika Coffa</fullName>
            </value>
            <value>
                <fullName>Vincent Coffa</fullName>
            </value>
            <value>
                <fullName>Ewa Szmigowska</fullName>
            </value>
            <value>
                <fullName>Mario Kozik</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>