default/objects/Opportunity/fields/Beschaftigte__c.field-meta.xml
<CustomField>
    <fullName>Beschaftigte__c</fullName>
    <formula>TEXT(Account.Beschaeftigte__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Beschäftigte</label>
    <type>Text</type>
</CustomField>