default/objects/Opportunity/fields/Bevollmaechtigung__c.field-meta.xml
<CustomField>
    <fullName>Bevollmaechtigung__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Ich/wir bestätigen, dass ich/wir rechtlich bevollmächtigt bin/sind, im Namen und auf Rechnung der im Antrag genannten Firma zu handeln.</inlineHelpText>
    <label>Bevollmächtigung</label>
    <type>Checkbox</type>
</CustomField>