default/objects/Opportunity/fields/Bi_weekly_14__c.field-meta.xml
<CustomField>
    <fullName>Bi_weekly_14__c</fullName>
    <formula>ROUND(IF(MAX(((Auftragsvolumen__c * (1+ Buffer_2__c) *
IF(Security_level_H_he_der_Sicherheit__c &gt; 1, ( 15+21 )/30, ( 15+14 )/30) +
Credit_Limit_Anpassung__c) * IF(OR(Security_level_H_he_der_Sicherheit__c = 0.04, Security_level_H_he_der_Sicherheit__c = 0.03), 1, Security_level_H_he_der_Sicherheit__c) -
IF(OR(Security_level_H_he_der_Sicherheit__c = 0.04, Security_level_H_he_der_Sicherheit__c = 0.03), Credit_System_Recommended_Limit__c, 0)), 0) = 0, 0, MAX(((Auftragsvolumen__c * (1+ Buffer_2__c) *
IF(Security_level_H_he_der_Sicherheit__c &gt; 1, ( 15+21 )/30, ( 15+14 )/30) +
Credit_Limit_Anpassung__c) * IF(OR(Security_level_H_he_der_Sicherheit__c = 0.04, Security_level_H_he_der_Sicherheit__c = 0.03), 1, Security_level_H_he_der_Sicherheit__c) -
IF(OR(Security_level_H_he_der_Sicherheit__c = 0.04, Security_level_H_he_der_Sicherheit__c = 0.03), Credit_System_Recommended_Limit__c, 0)), IF(ISPICKVAL(Account.BillingCountryCode, 'HU'), 10000, 100)))/IF(ISPICKVAL(Account.BillingCountryCode, 'HU'), 10000, 100), 0)*IF(ISPICKVAL(Account.BillingCountryCode, 'HU'), 10000, 100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bi-weekly + 14</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>