default/objects/Opportunity/fields/Billing_Period_by_Sales__c.field-meta.xml
<CustomField>
    <fullName>Billing_Period_by_Sales__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Billing Period by Sales</label>
    <type>Checkbox</type>
</CustomField>