default/objects/Opportunity/fields/BO_Notes__c.field-meta.xml
<CustomField>
    <fullName>BO_Notes__c</fullName>
    <label>BO Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>