default/objects/Opportunity/fields/Bonitaetsindex__c.field-meta.xml
<CustomField>
    <fullName>Bonitaetsindex__c</fullName>
    <label>Bonitätsindex</label>
    <length>3</length>
    <type>Text</type>
</CustomField>